<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Models.Fragments.HomepageFragment"
    android:background="@drawable/background">

    <Button
        android:id="@+id/button_serie_a"
        android:layout_width="377dp"
        android:layout_height="54dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/serie_a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        app:layout_constraintVertical_bias="0.392"
        tools:text="Serie A" />

    <Button
        android:id="@+id/button_la_liga"
        android:layout_width="377dp"
        android:layout_height="54dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/la_liga"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        app:layout_constraintVertical_bias="0.306"
        tools:text="La Liga" />

    <Button
        android:id="@+id/button_ligue1"
        android:layout_width="377dp"
        android:layout_height="54dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/ligue_une"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        app:layout_constraintVertical_bias="0.134"
        tools:text="Ligue 1" />

    <Button
        android:id="@+id/button_bundesliga"
        android:layout_width="380dp"
        android:layout_height="51dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/bundesliga"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        app:layout_constraintVertical_bias="0.055"
        tools:text="Bundesliga" />

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="413dp"
        android:layout_height="74dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="89dp"
        android:fontFamily="serif-monospace"
        android:lineSpacingExtra="4sp"
        android:text="@string/leagues_page"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.601"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_premier_league"
        android:layout_width="377dp"
        android:layout_height="54dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/premier_league"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        app:layout_constraintVertical_bias="0.219"
        tools:text="Premier League" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_serie_a" />

</androidx.constraintlayout.widget.ConstraintLayout>